--- a/Results 1.ipynb
+++ b/Results 1.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "# Results 1\n",
     "This experiment implements the simpliest way to use a feature extractor.   \n",
-    "We just compare features from the catalogue to features from the query models.   \n",
-    "It gives a **58%** 10-accuracy result."
+    "It just compares features from the catalogue to the features from query models.   \n",
+    "It gives a **30%** 10-accuracy result."
    ]
   },
   {
