--- a/Results 2, "Centered Crop".ipynb
+++ b/Results 2, "Centered Crop".ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Results 2\n",
-    "In order to get better result we crop the queries on their center with a (500,500) window.   \n",
+    "In order to get better result queries are croped on their center with a (500,500) window.   \n",
     "It gives a **51%** 10-accuracy result."
    ]
   },
