--- a/Results_ORB_BagOfWords.ipynb
+++ b/Results_ORB_BagOfWords.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# BoW Image Retrieval with ORB Features\n",
+    "# Bag of Words Based Image Retrieval with ORB Features\n",
     "In order to judge our Neural Features methods we implement the 'old school' approach to our problem.      \n",
     "We collect ORB features on each images, learn a dictionary upon it and acheive retrieval with Bag Of Words technique.    \n",
     "Please find more information on ORB features [here](http://www.dabi.temple.edu/~hbling/Teaching/12S_8543/Presentation/Rublee11ORB.pdf), and more information on BoW techniques [here](https://arxiv.org/abs/1304.5168).    \n",
@@ -360,8 +360,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Numpy aggregation\n",
-    "We aggregate all the features of all the images in one big matrix;"
+    "### Numpy Matrix\n",
+    "We aggregate all the features of all the images in one big matrix.    "
    ]
   },
   {
@@ -392,7 +392,7 @@
    "source": [
     "## Dictionary Learning\n",
     "We then aggregate our 97012 feature vectors into 2048 clusters with k-means. 2048 was chosen to mimic the dimension of our Neural Features. Even with 12 processors this process is quite long (12m). We dump the resulting clusters even if they would be different at each run.   \n",
-    "### K-means aggregation"
+    "### K-means Aggregation"
    ]
   },
   {
@@ -2449,6 +2449,312 @@
     "im = plt.imshow(cat_ORB_dict[0].reshape((2**5,2**6)))\n",
     "plt.colorbar(im)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Numpy Matrix\n",
+    "We merge our final dictionary into a np matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(196, 2048)\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat_ORB_dict_np = [cat_ORB_dict[0]]\n",
+    "for id_ in cat_ORB_dict:\n",
+    "    if id_ == 0:\n",
+    "        continue\n",
+    "    cat_ORB_dict_np = np.r_[cat_ORB_dict_np, [cat_ORB_dict[id_]]]\n",
+    "print(cat_ORB_dict_np.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Retrieval\n",
+    "### Computing ORB Features on Queries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "opening db/robes/mod/0.jpg\n",
+      "opening db/robes/mod/1.jpg\n",
+      "opening db/robes/mod/3.jpg\n",
+      "opening db/robes/mod/4.jpg\n",
+      "opening db/robes/mod/5.jpg\n",
+      "opening db/robes/mod/6.jpg\n",
+      "opening db/robes/mod/7.jpg\n",
+      "opening db/robes/mod/8.jpg\n",
+      "opening db/robes/mod/9.jpg\n",
+      "opening db/robes/mod/10.jpg\n",
+      "opening db/robes/mod/11.jpg\n",
+      "opening db/robes/mod/12.jpg\n",
+      "opening db/robes/mod/13.jpg\n",
+      "opening db/robes/mod/14.jpg\n",
+      "opening db/robes/mod/15.jpg\n",
+      "opening db/robes/mod/16.jpg\n",
+      "opening db/robes/mod/17.jpg\n",
+      "opening db/robes/mod/18.jpg\n",
+      "opening db/robes/mod/19.jpg\n",
+      "opening db/robes/mod/20.jpg\n",
+      "opening db/robes/mod/21.jpg\n",
+      "opening db/robes/mod/22.jpg\n",
+      "opening db/robes/mod/23.jpg\n",
+      "opening db/robes/mod/24.jpg\n",
+      "opening db/robes/mod/25.jpg\n",
+      "opening db/robes/mod/27.jpg\n",
+      "opening db/robes/mod/28.jpg\n",
+      "opening db/robes/mod/29.jpg\n",
+      "opening db/robes/mod/30.jpg\n",
+      "opening db/robes/mod/31.jpg\n",
+      "opening db/robes/mod/32.jpg\n",
+      "opening db/robes/mod/33.jpg\n",
+      "opening db/robes/mod/34.jpg\n",
+      "opening db/robes/mod/35.jpg\n",
+      "opening db/robes/mod/36.jpg\n",
+      "opening db/robes/mod/37.jpg\n",
+      "opening db/robes/mod/38.jpg\n",
+      "opening db/robes/mod/39.jpg\n",
+      "opening db/robes/mod/40.jpg\n",
+      "opening db/robes/mod/41.jpg\n",
+      "opening db/robes/mod/42.jpg\n",
+      "opening db/robes/mod/43.jpg\n",
+      "opening db/robes/mod/44.jpg\n",
+      "opening db/robes/mod/45.jpg\n",
+      "opening db/robes/mod/46.jpg\n",
+      "opening db/robes/mod/47.jpg\n",
+      "opening db/robes/mod/48.jpg\n",
+      "opening db/robes/mod/49.jpg\n",
+      "opening db/robes/mod/51.jpg\n",
+      "opening db/robes/mod/52.jpg\n",
+      "opening db/robes/mod/54.jpg\n",
+      "opening db/robes/mod/55.jpg\n",
+      "opening db/robes/mod/56.jpg\n",
+      "opening db/robes/mod/57.jpg\n",
+      "opening db/robes/mod/58.jpg\n",
+      "opening db/robes/mod/59.jpg\n",
+      "opening db/robes/mod/60.jpg\n",
+      "opening db/robes/mod/61.jpg\n",
+      "opening db/robes/mod/62.jpg\n",
+      "opening db/robes/mod/63.jpg\n",
+      "opening db/robes/mod/64.jpg\n",
+      "opening db/robes/mod/65.jpg\n",
+      "opening db/robes/mod/66.jpg\n",
+      "opening db/robes/mod/67.jpg\n",
+      "opening db/robes/mod/68.jpg\n",
+      "opening db/robes/mod/69.jpg\n",
+      "opening db/robes/mod/70.jpg\n",
+      "opening db/robes/mod/71.jpg\n",
+      "opening db/robes/mod/72.jpg\n",
+      "opening db/robes/mod/73.jpg\n",
+      "opening db/robes/mod/74.jpg\n",
+      "opening db/robes/mod/75.jpg\n",
+      "opening db/robes/mod/76.jpg\n",
+      "opening db/robes/mod/77.jpg\n",
+      "opening db/robes/mod/78.jpg\n",
+      "opening db/robes/mod/79.jpg\n",
+      "opening db/robes/mod/80.jpg\n",
+      "opening db/robes/mod/81.jpg\n",
+      "opening db/robes/mod/82.jpg\n",
+      "opening db/robes/mod/83.jpg\n",
+      "opening db/robes/mod/84.jpg\n",
+      "opening db/robes/mod/85.jpg\n",
+      "opening db/robes/mod/86.jpg\n",
+      "opening db/robes/mod/87.jpg\n",
+      "opening db/robes/mod/88.jpg\n",
+      "opening db/robes/mod/90.jpg\n",
+      "opening db/robes/mod/91.jpg\n",
+      "opening db/robes/mod/92.jpg\n",
+      "opening db/robes/mod/93.jpg\n",
+      "opening db/robes/mod/94.jpg\n",
+      "opening db/robes/mod/95.jpg\n",
+      "opening db/robes/mod/96.jpg\n",
+      "opening db/robes/mod/97.jpg\n",
+      "opening db/robes/mod/98.jpg\n",
+      "opening db/robes/mod/99.jpg\n",
+      "opening db/robes/mod/100.jpg\n",
+      "opening db/robes/mod/101.jpg\n",
+      "opening db/robes/mod/102.jpg\n",
+      "opening db/robes/mod/103.jpg\n",
+      "opening db/robes/mod/104.jpg\n",
+      "opening db/robes/mod/105.jpg\n",
+      "opening db/robes/mod/106.jpg\n",
+      "opening db/robes/mod/107.jpg\n",
+      "opening db/robes/mod/108.jpg\n",
+      "opening db/robes/mod/109.jpg\n",
+      "opening db/robes/mod/111.jpg\n",
+      "opening db/robes/mod/112.jpg\n",
+      "opening db/robes/mod/113.jpg\n",
+      "opening db/robes/mod/114.jpg\n",
+      "opening db/robes/mod/115.jpg\n",
+      "opening db/robes/mod/116.jpg\n",
+      "opening db/robes/mod/117.jpg\n",
+      "opening db/robes/mod/118.jpg\n",
+      "opening db/robes/mod/119.jpg\n",
+      "opening db/robes/mod/121.jpg\n",
+      "opening db/robes/mod/122.jpg\n",
+      "opening db/robes/mod/123.jpg\n",
+      "opening db/robes/mod/124.jpg\n",
+      "opening db/robes/mod/125.jpg\n",
+      "opening db/robes/mod/126.jpg\n",
+      "opening db/robes/mod/128.jpg\n",
+      "opening db/robes/mod/129.jpg\n",
+      "opening db/robes/mod/130.jpg\n",
+      "opening db/robes/mod/132.jpg\n",
+      "opening db/robes/mod/133.jpg\n",
+      "opening db/robes/mod/134.jpg\n",
+      "opening db/robes/mod/135.jpg\n",
+      "opening db/robes/mod/136.jpg\n",
+      "opening db/robes/mod/137.jpg\n",
+      "opening db/robes/mod/138.jpg\n",
+      "opening db/robes/mod/139.jpg\n",
+      "opening db/robes/mod/140.jpg\n",
+      "opening db/robes/mod/141.jpg\n",
+      "opening db/robes/mod/143.jpg\n",
+      "opening db/robes/mod/145.jpg\n",
+      "opening db/robes/mod/146.jpg\n",
+      "opening db/robes/mod/147.jpg\n",
+      "opening db/robes/mod/148.jpg\n",
+      "opening db/robes/mod/149.jpg\n",
+      "opening db/robes/mod/150.jpg\n",
+      "opening db/robes/mod/151.jpg\n",
+      "opening db/robes/mod/152.jpg\n",
+      "opening db/robes/mod/153.jpg\n",
+      "opening db/robes/mod/154.jpg\n",
+      "opening db/robes/mod/155.jpg\n",
+      "opening db/robes/mod/156.jpg\n",
+      "opening db/robes/mod/157.jpg\n",
+      "opening db/robes/mod/158.jpg\n",
+      "opening db/robes/mod/160.jpg\n",
+      "opening db/robes/mod/161.jpg\n",
+      "opening db/robes/mod/162.jpg\n",
+      "opening db/robes/mod/163.jpg\n",
+      "opening db/robes/mod/164.jpg\n",
+      "opening db/robes/mod/165.jpg\n",
+      "opening db/robes/mod/166.jpg\n",
+      "opening db/robes/mod/168.jpg\n",
+      "opening db/robes/mod/169.jpg\n",
+      "opening db/robes/mod/170.jpg\n",
+      "opening db/robes/mod/171.jpg\n",
+      "opening db/robes/mod/172.jpg\n",
+      "opening db/robes/mod/173.jpg\n",
+      "opening db/robes/mod/174.jpg\n",
+      "opening db/robes/mod/175.jpg\n",
+      "opening db/robes/mod/176.jpg\n",
+      "opening db/robes/mod/177.jpg\n",
+      "opening db/robes/mod/178.jpg\n",
+      "opening db/robes/mod/179.jpg\n",
+      "opening db/robes/mod/180.jpg\n",
+      "opening db/robes/mod/181.jpg\n",
+      "opening db/robes/mod/182.jpg\n",
+      "opening db/robes/mod/183.jpg\n",
+      "opening db/robes/mod/184.jpg\n",
+      "opening db/robes/mod/185.jpg\n",
+      "opening db/robes/mod/186.jpg\n",
+      "opening db/robes/mod/187.jpg\n",
+      "opening db/robes/mod/188.jpg\n",
+      "opening db/robes/mod/189.jpg\n",
+      "opening db/robes/mod/191.jpg\n",
+      "opening db/robes/mod/192.jpg\n",
+      "opening db/robes/mod/193.jpg\n",
+      "opening db/robes/mod/194.jpg\n",
+      "opening db/robes/mod/195.jpg\n",
+      "opening db/robes/mod/196.jpg\n",
+      "opening db/robes/mod/197.jpg\n",
+      "opening db/robes/mod/198.jpg\n",
+      "opening db/robes/mod/199.jpg\n",
+      "opening db/robes/mod/200.jpg\n",
+      "opening db/robes/mod/201.jpg\n",
+      "opening db/robes/mod/202.jpg\n",
+      "opening db/robes/mod/203.jpg\n",
+      "opening db/robes/mod/204.jpg\n",
+      "opening db/robes/mod/205.jpg\n",
+      "opening db/robes/mod/206.jpg\n",
+      "opening db/robes/mod/207.jpg\n",
+      "opening db/robes/mod/208.jpg\n",
+      "opening db/robes/mod/209.jpg\n",
+      "- Data saved to cache-file: dumps/quer_ORB_per_id.dump\n"
+     ]
+    }
+   ],
+   "source": [
+    "quer_ORB_per_id = cache.cache(\"dumps/quer_ORB_per_id.dump\",compute_ORB_features,quer_by_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10-Nearset Neighbours Model\n",
+    "We construct a 10-NN model over our catalogue dictionary in order to proceed with retrieval and compute 10-accuracy score."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ten_nbrs = NearestNeighbors(n_neighbors=10).fit(cat_ORB_dict_np)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10-accuracy score: 0.25510204081632654\n"
+     ]
+    }
+   ],
+   "source": [
+    "success = 0\n",
+    "for id_ in quer_ORB_per_id:\n",
+    "    quer_visual_hist = get_visual_hist(kmeans_result,quer_ORB_per_id[id_])\n",
+    "    distances,indices = ten_nbrs.kneighbors([quer_visual_hist])\n",
+    "    success += class_of_id[id_] in indices[0]\n",
+    "print(\"10-accuracy score:\",success/len(quer_ORB_per_id))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The traditionnal Bag Of Word method achieves a 25% success rate."
    ]
   },
   {
