--- a/Results_ORB_BagOfWords.ipynb
+++ b/Results_ORB_BagOfWords.ipynb
@@ -361,8 +361,7 @@
       "opening db/robes/mod/1.jpg\n",
       "opening db/robes/mod/3.jpg\n",
       "opening db/robes/mod/4.jpg\n",
-      "...",
-      "opening db/robes/mod/209.jpg\n",
+      "...opening db/robes/mod/209.jpg\n",
       "- Data saved to cache-file: dumps/quer_ORB_per_id.dump\n"
      ]
     }
@@ -425,15 +424,6 @@
    "source": [
     "The traditionnal Bag Of Word method achieves a 25% success rate."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
