--- a/Results_ORB_BagOfWords.ipynb
+++ b/Results_ORB_BagOfWords.ipynb
@@ -422,8 +422,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The traditionnal Bag Of Word method achieves a 25% success rate."
+    "The traditionnal Bag Of Word method achieves a **25% success rate**."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
